--- a/web/templates/settings.html
+++ b/web/templates/settings.html
@@ -680,6 +680,9 @@ John Smith."></textarea>
                     <i data-lucide="trash-2" class="icon-sm icon-inline"></i>Delete
                 </button>
             </div>
+            <div id="logo-preview-container" class="image-preview-container" style="display: none;">
+                <img id="logo-preview" src="" alt="Logo preview" class="image-preview">
+            </div>
         </div>
 
         <div class="form-group">
@@ -693,6 +696,9 @@ John Smith."></textarea>
                 <button type="button" onclick="deleteSignature()" id="signature-delete-button" class="btn btn-sm btn-danger-light">
                     <i data-lucide="trash-2" class="icon-sm icon-inline"></i>Delete
                 </button>
+            </div>
+            <div id="signature-preview-container" class="image-preview-container" style="display: none;">
+                <img id="signature-preview" src="" alt="Signature preview" class="image-preview">
             </div>
         </div>
         
