--- a/web/templates/main_view.html
+++ b/web/templates/main_view.html
@@ -199,11 +199,12 @@
                     </a>
                     {% endif %}
                     {% if client.display_phone %}
-                    <a href="{% if client.contact_type == 'text' %}sms:{% else %}tel:{% endif %}{{ client.display_phone }}" 
-                       class="contact-link {{ 'preferred' if client.preferred_contact in ['call_cell', 'call_home', 'call_work', 'text'] else '' }}" 
-                       onclick="event.stopPropagation()">
-                        {{ client.contact_icon|safe }}<span>{{ client.display_phone }}</span>{% if client.ok_to_leave_message == 'no' %} <i data-lucide="alert-triangle" class="icon-warning"></i>{% endif %}
-                    </a>
+                    <span class="phone-with-warning">
+                        <a href="{% if client.contact_type == 'text' %}sms:{% else %}tel:{% endif %}{{ client.display_phone }}" 
+                           class="contact-link {{ 'preferred' if client.preferred_contact in ['call_cell', 'call_home', 'call_work', 'text'] else '' }}" 
+                           onclick="event.stopPropagation()">
+                            {{ client.contact_icon|safe }}<span>{{ client.display_phone }}</span></a>{% if client.ok_to_leave_message == 'no' %}<i data-lucide="alert-triangle" class="icon-warning"></i>{% endif %}
+                    </span>
                     {% endif %}
                 </div>
                 <div class="dates">
@@ -230,11 +231,12 @@
                     </a>
                     {% endif %}
                     {% if client.display_phone %}
-                    <a href="{% if client.contact_type == 'text' %}sms:{% else %}tel:{% endif %}{{ client.display_phone }}" 
-                       class="contact-link {{ 'preferred' if client.preferred_contact in ['call_cell', 'call_home', 'call_work', 'text'] else '' }}" 
-                       onclick="event.stopPropagation()">
-                        {{ client.contact_icon|safe }}<span>{{ client.display_phone }}</span>{% if client.ok_to_leave_message == 'no' %} <i data-lucide="alert-triangle" class="icon-warning"></i>{% endif %}
-                    </a>
+                    <span class="phone-with-warning">
+                        <a href="{% if client.contact_type == 'text' %}sms:{% else %}tel:{% endif %}{{ client.display_phone }}" 
+                           class="contact-link {{ 'preferred' if client.preferred_contact in ['call_cell', 'call_home', 'call_work', 'text'] else '' }}" 
+                           onclick="event.stopPropagation()">
+                            {{ client.contact_icon|safe }}<span>{{ client.display_phone }}</span></a>{% if client.ok_to_leave_message == 'no' %}<i data-lucide="alert-triangle" class="icon-warning"></i>{% endif %}
+                    </span>
                     {% endif %}
                 </div>
                 <div class="dates-row">
