--- a/web/static/css/manage_links.css
+++ b/web/static/css/manage_links.css
@@ -198,7 +198,7 @@
     border-radius: 0.375rem;
     border: none;
     cursor: pointer;
-    font-family: 'Lexend', sans-serif;
+    font-family: var(--font-ui);
     font-weight: 500;
 }
 
@@ -215,7 +215,7 @@
     border-radius: 0.375rem;
     border: none;
     cursor: pointer;
-    font-family: 'Lexend', sans-serif;
+    font-family: var(--font-ui);
     font-weight: 500;
 }
 
